--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
-<!doctype html>
 <html>
 	<head>
-		<title>Hello World</title>
+		<meta name="viewport" content=
+"width=device-width, initial-scale=
+1.0">
+		<title>Web Unsub v6 by saepulfariz</title>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div class="container">
+			
+			
+			<div class="header">
+				<div class="logo">
+					logo
+				</div>
+				<div class="judul ">
+					workshop
+				</div>
+				<div class="pencarian col-4">
+					pencarian
+				</div>
+				<div class="clear"></div>
+			</div>
+			
+			
+			<div class="content">
+				<div class="menu">
+					<ul>
+						<li>Home</li>
+						<li>About</li>
+						<li>Contact</li>
+					</ul>
+				</div>
+				<div class="isi">
+					
+						<div class="kotak">1</div>
+						<div class="kotak">2</div>
+						<div class="kotak">3</div>
+						<div class="kotak">4</div>
+						<div class="kotak">5</div>
+						<div class="kotak">6</div>
+					
+				</div>
+				<div class="clear"></div>
+			</div>
+			
+			
+			<div class="footer">
+				<p>&copy Copyright 2020 | By Saepulfariz</p>
+			</div>
+		</div>
 	</body>
 </html>
